Update index names

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -22,7 +22,13 @@ frontend elastic_api_in
   bind *:8443 ssl crt /etc/es-proxy-tls-cache/frontend.pem
 
   # Everything goes to elasticsearch
-  acl url_secure_ee_search path_beg /tigera_secure_ee_flows/_search
+  # Allow access to flow logs and audit logs.
+  # We add the encoded path as well since kube-apiserver forwards
+  # URL encoded paths.
+  acl url_secure_ee_flows_search path_beg /tigera_secure_ee_flows."${ELASTIC_INDEX_SUFFIX}".*/_search
+  acl url_secure_ee_flows_search_encoded path_beg /tigera_secure_ee_flows."${ELASTIC_INDEX_SUFFIX}".%2A/_search
+  acl url_secure_ee_audits_search path_beg /tigera_secure_ee_audit*."${ELASTIC_INDEX_SUFFIX}".*/_search
+  acl url_secure_ee_audits_search_encoded path_beg /tigera_secure_ee_audit%2A."${ELASTIC_INDEX_SUFFIX}".%2A/_search
 
   # But restrict to only GET and POST methods.
   # We need to allow POST method here due to client library
@@ -31,7 +37,7 @@ frontend elastic_api_in
   acl valid_http_method method GET HEAD OPTIONS POST
   http-request deny if ! valid_http_method
 
-  use_backend elasticsearch if url_secure_ee_search
+  use_backend elasticsearch if url_secure_ee_flows_search or url_secure_ee_flows_search_encoded or url_secure_ee_audits_search or url_secure_ee_audits_search_encoded
 
 #
 # elasticsearch backend
