Fix RBAC when using typha
Should have templated on typha usage not kdd.

--- a/_includes/master/manifests/rbac.yaml
+++ b/_includes/master/manifests/rbac.yaml
@@ -77,7 +77,7 @@ rules:
       # Used to discover service IPs for advertisement.
       - watch
       - list
-{%- if include.datastore == "kdd" %}
+{%- if include.typha == "true" %}
       # Used to discover Typhas.
       - get
 {%- endif %}
