Update liveness probe (#882)
* Update liveness probe

Updated to use the new index format + it now lives in a script so that
it can grab the environment variable for index suffix information.

* Port to 2.3

* Fix indentation

--- a/_includes/master/manifests/es-proxy.yaml
+++ b/_includes/master/manifests/es-proxy.yaml
@@ -85,11 +85,17 @@ spec:
               secretKeyRef:
                 name: tigera-es-proxy
                 key: backend.authHeader
+          - name: ELASTIC_INDEX_SUFFIX
+            valueFrom:
+              configMapKeyRef:
+                name: tigera-es-config
+                key: tigera.elasticsearch.cluster-name
         livenessProbe:
-          httpGet:
-            path: /tigera_secure_ee_flows/_search?size=0
-            port: 8443
-            scheme: HTTPS
+          exec:
+            command:
+              - sh
+              - -c
+              - /bin/liveness.sh
           initialDelaySeconds: 90
           periodSeconds: 10
         volumeMounts:
