Add subpaths for each log type (#31)

--- a/fluent_s3.conf
+++ b/fluent_s3.conf
@@ -49,7 +49,7 @@
     aws_sec_key "#{ENV['AWS_SEC_KEY']}"
     s3_bucket "#{ENV['S3_BUCKET_NAME']}"
     s3_region "#{ENV['AWS_REGION']}"
-    path "#{ENV['S3_BUCKET_PATH']}"
+    path "#{ENV['S3_BUCKET_PATH']}/flows"
     <buffer>
       flush_mode interval
       flush_interval "#{ENV['S3_FLUSH_INTERVAL']}"
@@ -110,7 +110,7 @@
     aws_sec_key "#{ENV['AWS_SEC_KEY']}"
     s3_bucket "#{ENV['S3_BUCKET_NAME']}"
     s3_region "#{ENV['AWS_REGION']}"
-    path "#{ENV['S3_BUCKET_PATH']}"
+    path "#{ENV['S3_BUCKET_PATH']}/audit_tsee"
     <buffer>
       flush_mode interval
       flush_interval "#{ENV['S3_FLUSH_INTERVAL']}"
@@ -142,7 +142,7 @@
     aws_sec_key "#{ENV['AWS_SEC_KEY']}"
     s3_bucket "#{ENV['S3_BUCKET_NAME']}"
     s3_region "#{ENV['AWS_REGION']}"
-    path "#{ENV['S3_BUCKET_PATH']}"
+    path "#{ENV['S3_BUCKET_PATH']}/audit_kube"
     <buffer>
       flush_mode interval
       flush_interval "#{ENV['S3_FLUSH_INTERVAL']}"
