Add S3 archiving for Elasticsearch logs (#836)
Add S3 archiving for Elasticsearch logs document

--- a/_data/master/navbars/usage.yml
+++ b/_data/master/navbars/usage.yml
@@ -51,6 +51,8 @@ toc:
       path: /usage/logs/elastic/view
     - title: Configuring Elasticsearch
       path: /usage/logs/configure-elastic
+    - title: Archiving logs to S3
+      path: /usage/logs/elastic/s3-archive
   - title: iptables
     path: /usage/logs/iptables
   - title: Component
