--- a/fluent_output_s3.conf
+++ b/fluent_output_s3.conf
@@ -22,7 +22,7 @@
   <store>
     @type s3
     aws_key_id "#{ENV['AWS_KEY_ID']}"
-    aws_sec_key "#{ENV['AWS_SEC_KEY']}"
+    aws_sec_key "#{ENV['AWS_SECRET_KEY']}"
     s3_bucket "#{ENV['S3_BUCKET_NAME']}"
     s3_region "#{ENV['AWS_REGION']}"
     path "#{ENV['S3_BUCKET_PATH']}/flows"
@@ -54,7 +54,7 @@
   <store>
     @type s3
     aws_key_id "#{ENV['AWS_KEY_ID']}"
-    aws_sec_key "#{ENV['AWS_SEC_KEY']}"
+    aws_sec_key "#{ENV['AWS_SECRET_KEY']}"
     s3_bucket "#{ENV['S3_BUCKET_NAME']}"
     s3_region "#{ENV['AWS_REGION']}"
     path "#{ENV['S3_BUCKET_PATH']}/audit_tsee"
@@ -86,7 +86,7 @@
   <store>
     @type s3
     aws_key_id "#{ENV['AWS_KEY_ID']}"
-    aws_sec_key "#{ENV['AWS_SEC_KEY']}"
+    aws_sec_key "#{ENV['AWS_SECRET_KEY']}"
     s3_bucket "#{ENV['S3_BUCKET_NAME']}"
     s3_region "#{ENV['AWS_REGION']}"
     path "#{ENV['S3_BUCKET_PATH']}/audit_kube"
