--- a/_data/master/navbars/usage.yml
+++ b/_data/master/navbars/usage.yml
@@ -53,6 +53,8 @@ toc:
       path: /usage/logs/configure-elastic
     - title: Archiving logs to S3
       path: /usage/logs/elastic/s3-archive
+    - title: Filtering out flow logs
+      path: /usage/logs/elastic/filtering
   - title: iptables
     path: /usage/logs/iptables
   - title: Component
