Added number of shards for index tigera_secure_ee_flows (#37)
* Added number of shards for index tigera_secure_ee_flows

* Review feedback

--- a/elastic_mapping_flows.template
+++ b/elastic_mapping_flows.template
@@ -1,5 +1,8 @@
 {
   "template": "tigera_secure_ee_flows*",
+  "settings": {
+    "number_of_shards": 5
+  },
   "mappings": {
     "_default_": {
       "properties" : {
