--- a/_includes/v2.3/manifests/monitor-calico.yaml
+++ b/_includes/v2.3/manifests/monitor-calico.yaml
@@ -27,6 +27,8 @@ data:
   # to allow multiple clusters to share one Elasticsearch cluster.  The value of this field must match that of 
   # tigera.cnx-manager.cluster-name in tigera-cnx-manager-config.
   tigera.elasticsearch.cluster-name: "cluster"
+  # The number of shards for index tigera_secure_ee_flows.
+  tigera.elasticsearch.flows-index-shards: 5
   # The retention period for flow logs, in days.  Logs written on a day that started at least this long ago are
   # removed.  To keep logs for at least x days, use a retention period of x+1.
   tigera.elasticsearch.flow-retention: "8"
@@ -458,6 +460,11 @@ spec:
                 configMapKeyRef:
                   name: tigera-es-config
                   key: tigera.elasticsearch.cluster-name
+            - name: ELASTIC_FLOWS_INDEX_SHARDS
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-es-config
+                  key: tigera.elasticsearch.flows-index-shards
             - name: FLUENTD_FLOW_FILTERS
               valueFrom:
                 configMapKeyRef:
