--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -27,8 +27,8 @@ frontend elastic_api_in
   # URL encoded paths.
   acl url_secure_ee_flows_search path_beg /tigera_secure_ee_flows."${ELASTIC_INDEX_SUFFIX}".*/_search
   acl url_secure_ee_flows_search_encoded path_beg /tigera_secure_ee_flows."${ELASTIC_INDEX_SUFFIX}".%2A/_search
-  acl url_secure_ee_audits_search path_beg /tigera_secure_ee_audit*."${ELASTIC_INDEX_SUFFIX}".*/_search
-  acl url_secure_ee_audits_search_encoded path_beg /tigera_secure_ee_audit%2A."${ELASTIC_INDEX_SUFFIX}".%2A/_search
+  acl url_secure_ee_audits_search path_beg /tigera_secure_ee_audit_*."${ELASTIC_INDEX_SUFFIX}".*/_search
+  acl url_secure_ee_audits_search_encoded path_beg /tigera_secure_ee_audit_%2A."${ELASTIC_INDEX_SUFFIX}".%2A/_search
 
   # But restrict to only GET and POST methods.
   # We need to allow POST method here due to client library
