--- a/_includes/master/manifests/operator.yaml
+++ b/_includes/master/manifests/operator.yaml
@@ -65,6 +65,7 @@ rules:
   - alertmanagers
   - prometheuses
   - servicemonitors
+  - prometheusrules
   verbs:
   - "*"
 - apiGroups:
@@ -89,6 +90,7 @@ rules:
 - apiGroups: [""]
   resources:
   - nodes
+  - namespaces
   verbs: ["list", "watch"]
 ---
 apiVersion: v1
