intrusion-detection-controller Makefile
Also removes release tag targets from installer Makefile and
consolidates into a top level Makefile that can handle the
release.

Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .*.swp
 /test/config.json
 /install/intrusion-detection-job-installer
-/.idea/
-/controller/cmd/controller/controller
+*/.idea/
+/controller/bin
+/controller/.go-build-cache
+/controller/.go-pkg-cache
+/controller/docker-image/bin
