Controller version string
Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -117,10 +117,10 @@ CONTROLLER_BUILD_DATE?=$(shell date -u +'%FT%T%z')
 CONTROLLER_GIT_REVISION?=$(shell git rev-parse --short HEAD)
 CONTROLLER_GIT_DESCRIPTION?=$(shell git describe --tags)
 
-VERSION_FLAGS=-X $(PACKAGE_NAME)/cmd/controller/main.VERSION=$(CONTROLLER_VERSION) \
-	-X $(PACKAGE_NAME)/cmd/controller/main.BUILD_DATE=$(CONTROLLER_BUILD_DATE) \
-	-X $(PACKAGE_NAME)/cmd/controller/main.GIT_DESCRIPTION=$(CONTROLLER_GIT_DESCRIPTION) \
-	-X $(PACKAGE_NAME)/cmd/controller/main.GIT_REVISION=$(CONTROLLER_GIT_REVISION)
+VERSION_FLAGS=-X main.VERSION=$(CONTROLLER_VERSION) \
+	-X main.BUILD_DATE=$(CONTROLLER_BUILD_DATE) \
+	-X main.GIT_DESCRIPTION=$(CONTROLLER_GIT_DESCRIPTION) \
+	-X main.GIT_REVISION=$(CONTROLLER_GIT_REVISION)
 BUILD_LDFLAGS=-ldflags "$(VERSION_FLAGS)"
 RELEASE_LDFLAGS=-ldflags "$(VERSION_FLAGS) -s -w"
 
