--- a/_includes/master/manifests/monitor-calico.yaml
+++ b/_includes/master/manifests/monitor-calico.yaml
@@ -773,6 +773,102 @@ spec:
 {%- endif %}
 ---
 
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: intrusion-detection-controller
+  namespace: calico-monitoring
+---
+
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: intrusion-detection-controller
+rules:
+  - apiGroups:
+      - "projectcalico.org"
+    resources:
+      - globalthreatfeeds
+      - globalnetworksets
+    verbs: ["*"]
+---
+
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: intrusion-detection-controller
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: intrusion-detection-controller
+subjects:
+- kind: ServiceAccount
+  name: intrusion-detection-controller
+  namespace: calico-monitoring
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: intrusion-detection-controller
+  namespace: calico-monitoring
+  labels:
+    k8s-app: intrusion-detection-controller
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      k8s-app: intrusion-detection-controller
+  template:
+    metadata:
+      labels:
+        k8s-app: intrusion-detection-controller
+    spec:
+      serviceAccountName: intrusion-detection-controller
+      containers:
+      - name: controller
+        image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["intrusion-detection-controller"]}}:{{site.data.versions[page.version].first.components["intrusion-detection-controller"].version}}
+        env:
+{%- if include.secure_es == "true" %}
+          - name: ELASTIC_HOST
+            valueFrom: 
+              configMapKeyRef:
+                name: tigera-es-proxy
+                key: elasticsearch.backend.host
+          - name: ELASTIC_PORT
+            valueFrom: 
+              configMapKeyRef:
+                name: tigera-es-proxy
+                key: elasticsearch.backend.port
+          - name: USER
+            valueFrom: 
+              secretKeyRef:
+                name: elastic-ee-intrusion-detection
+                key: username
+          - name: PASSWORD
+            valueFrom: 
+              secretKeyRef:
+                name: elastic-ee-intrusion-detection
+                key: password
+          - name: CA_CERT
+            value: /certs/ca.pem
+        volumeMounts:
+          - name: certs
+            mountPath: /certs
+      volumes:
+        - name: certs
+          configMap:
+            name: elastic-ca-config
+{%- else %}
+          - name: ELASTIC_HOST
+            value: elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local
+          - name: ELASTIC_PORT
+            value: "9200" 
+          - name: ELASTIC_SCHEME
+            value: "http" 
+{%- endif %}
+---
+
 # Network set for the K8s API Server's IP addresses.
 apiVersion: projectcalico.org/v3
 kind: GlobalNetworkSet
