Add GlobalThreatFeed API object (#934)
* Add GlobalThreatFeed API object

Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/_data/master/navbars/reference.yml
+++ b/_data/master/navbars/reference.yml
@@ -63,6 +63,8 @@ toc:
         path: /reference/calicoctl/resources/globalnetworkpolicy
       - title: Global Network Set
         path: /reference/calicoctl/resources/globalnetworkset
+      - title: Global Threat Feed
+        path: /reference/calicoctl/resources/globalthreatfeed
       - title: Host Endpoint
         path: /reference/calicoctl/resources/hostendpoint
       - title: IP Pool
