--- a/_includes/master/manifests/cnx.yaml
+++ b/_includes/master/manifests/cnx.yaml
@@ -272,6 +272,7 @@ rules:
       - hostendpoints
       - licensekeys
       - globalnetworksets
+      - globalthreatfeeds
     verbs:
       - "*"
 
