--- a/_includes/master/manifests/kdd-crds.yaml
+++ b/_includes/master/manifests/kdd-crds.yaml
@@ -186,3 +186,19 @@ spec:
     kind: RemoteClusterConfiguration
     plural: remoteclusterconfigurations
     singular: remoteclusterconfiguration
+
+---
+
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: globalthreatfeeds.crd.projectcalico.org
+spec:
+  scope: Cluster
+  group: crd.projectcalico.org
+  version: v1
+  names:
+    kind: GlobalThreatFeed
+    plural: globalthreatfeeds
+    singular: globalthreatfeeds
+
