Switch to using @include for output config

--- a/fluent_output.conf
+++ b/fluent_output.conf
@@ -1,24 +1,15 @@
 
 <match flows>
-${COPY}
-${START_STORE}
-${OUTPUT_FLOW_ES}
-${END_STORE}
-${OUTPUT_FLOW_S3}
+  @type copy
+  @include /fluentd/etc/output_flows/*
 </match>
 
 <match audit.tsee>
-${COPY}
-${START_STORE}
-${OUTPUT_AUDIT_TSEE_ES}
-${END_STORE}
-${OUTPUT_AUDIT_TSEE_S3}
+  @type copy
+  @include /fluentd/etc/output_tsee_audit/*
 </match>
 
 <match audit.kube>
-${COPY}
-${START_STORE}
-${OUTPUT_AUDIT_KUBE_ES}
-${END_STORE}
-${OUTPUT_AUDIT_KUBE_S3}
+  @type copy
+  @include /fluentd/etc/output_kube_audit/*
 </match>
