--- a/test/es-no-secure.cfg
+++ b/test/es-no-secure.cfg
@@ -59,38 +59,47 @@
     </record>
   </filter>
   <match flows>
-    @type elasticsearch
-    host "elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local"
-    port 9200
-    index_name "tigera_secure_ee_flows.test-cluster-name.%Y%m%d"
-    template_file "/fluentd/etc/elastic_mapping_flows.template"
-    template_name "tigera_secure_ee_flows"
-    <buffer tag, time>
-      timekey 1d
-      flush_mode interval
-      flush_interval 5s
-    </buffer>
+    @type copy
+    <store>
+      @type "elasticsearch"
+      host "elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local"
+      port 9200
+      index_name "tigera_secure_ee_flows.test-cluster-name.%Y%m%d"
+      template_file "/fluentd/etc/elastic_mapping_flows.template"
+      template_name "tigera_secure_ee_flows"
+      <buffer tag, time>
+        timekey 1d
+        flush_mode interval
+        flush_interval 5s
+      </buffer>
+    </store>
   </match>
   <match audit.tsee>
-    @type elasticsearch
-    host "elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local"
-    port 9200
-    index_name "tigera_secure_ee_audit_ee.test-cluster-name.%Y%m%d"
-    <buffer tag, time>
-      timekey 1d
-      flush_mode interval
-      flush_interval 5s
-    </buffer>
+    @type copy
+    <store>
+      @type "elasticsearch"
+      host "elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local"
+      port 9200
+      index_name "tigera_secure_ee_audit_ee.test-cluster-name.%Y%m%d"
+      <buffer tag, time>
+        timekey 1d
+        flush_mode interval
+        flush_interval 5s
+      </buffer>
+    </store>
   </match>
   <match audit.kube>
-    @type elasticsearch
-    host "elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local"
-    port 9200
-    index_name "tigera_secure_ee_audit_kube.test-cluster-name.%Y%m%d"
-    <buffer tag, time>
-      timekey 1d
-      flush_mode interval
-      flush_interval 5s
-    </buffer>
+    @type copy
+    <store>
+      @type "elasticsearch"
+      host "elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local"
+      port 9200
+      index_name "tigera_secure_ee_audit_kube.test-cluster-name.%Y%m%d"
+      <buffer tag, time>
+        timekey 1d
+        flush_mode interval
+        flush_interval 5s
+      </buffer>
+    </store>
   </match>
 </ROOT>
