--- a/_data/versions.yml
+++ b/_data/versions.yml
@@ -42,6 +42,7 @@ v2.3:
       url: ""
     calico:
       version: v3.4.0
+      minor_version: v3.4
       url: https://github.com/projectcalico/calico/releases/tag/v3.4.0
     prometheus-operator:
       version: v0.18.1
@@ -127,6 +128,7 @@ v2.2:
       url: ""
     calico:
       version: v3.2.4
+      minor_version: v3.2
       url: https://github.com/projectcalico/calico/releases/tag/v3.2.4
     prometheus-operator:
       version: v0.18.1
@@ -855,7 +857,8 @@ master:
       version: v0.6.1
       url: ""
     calico:
-      version: v3.1.0
+      version: v3.4.0
+      minor_version: v3.4
       url: https://github.com/projectcalico/calico/releases/tag/v3.1.0
     prometheus-operator:
       version: v0.28.0
