--- a/_includes/master/manifests/monitor-calico.yaml
+++ b/_includes/master/manifests/monitor-calico.yaml
@@ -554,6 +554,58 @@ spec:
                   name: tigera-s3-archiving
                   key: s3.flush-interval
                   optional: true
+            - name: SYSLOG_FLOW_LOG
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-syslog-archiving
+                  key: flow-logs
+                  optional: true
+            - name: SYSLOG_AUDIT_LOG
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-syslog-archiving
+                  key: audit-logs
+                  optional: true
+            - name: SYSLOG_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-syslog-archiving
+                  key: host
+                  optional: true
+            - name: SYSLOG_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-syslog-archiving
+                  key: port
+                  optional: true
+            - name: SYSLOG_PROTOCOL
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-syslog-archiving
+                  key: protocol
+                  optional: true
+            - name: SYSLOG_FLUSH_INTERVAL
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-syslog-archiving
+                  key: flush-interval
+                  optional: true
+            - name: SYSLOG_TLS
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-syslog-archiving
+                  key: tls
+                  optional: true
+            - name: SYSLOG_VERIFY_MODE
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-syslog-archiving
+                  key: verify_mode
+                  optional: true
+            - name: SYSLOG_HOSTNAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
 {%- if include.orch == "openshift" %}
           securityContext:
             privileged: true
@@ -568,6 +620,9 @@ spec:
             - name: elastic-ca-cert-volume
               mountPath: /etc/fluentd/elastic
 {%- endif %}
+            - name: syslog-config
+              mountPath: /etc/fluentd/syslog/ca.pem
+              subPath: ca
           readinessProbe:
             exec:
               command:
@@ -598,6 +653,11 @@ spec:
           configMap:
             name: elastic-ca-config
 {%- endif %}
+        - name: syslog-config
+          configMap:
+            name: tigera-syslog-archiving
+            defaultMode: 420
+            optional: true
 ---
 
 apiVersion: batch/v1beta1
