Set some defaults for syslog and flush interval
Also added test configs for syslog configurations.

--- a/outputs/out-syslog.conf
+++ b/outputs/out-syslog.conf
@@ -14,6 +14,6 @@
     </format>
     <buffer>
       flush_mode interval
-      flush_interval "#{ENV['ELASTIC_FLUSH_INTERVAL']}"
+      flush_interval "#{ENV['SYSLOG_FLUSH_INTERVAL']}"
     </buffer>
   </store>
